--- a/Makefile.win
+++ b/Makefile.win
@@ -4,8 +4,8 @@
 CPP      = g++.exe -D__DEBUG__
 CC       = gcc.exe -D__DEBUG__
 WINDRES  = windres.exe
-OBJ      = main.o TerminalRenderer.o Board.o
-LINKOBJ  = main.o TerminalRenderer.o Board.o
+OBJ      = main.o TerminalRenderer.o Game.o
+LINKOBJ  = main.o TerminalRenderer.o Game.o
 LIBS     = -L"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib" -L"C:/Program Files (x86)/Dev-Cpp/MinGW64/x86_64-w64-mingw32/lib" -static-libgcc -g3
 INCS     = -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/x86_64-w64-mingw32/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include"
 CXXINCS  = -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/x86_64-w64-mingw32/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include/c++"
@@ -30,5 +30,5 @@ main.o: main.cpp
 TerminalRenderer.o: TerminalRenderer.cpp
 	$(CPP) -c TerminalRenderer.cpp -o TerminalRenderer.o $(CXXFLAGS)
 
-Board.o: Board.cpp
-	$(CPP) -c Board.cpp -o Board.o $(CXXFLAGS)
+Game.o: Game.cpp
+	$(CPP) -c Game.cpp -o Game.o $(CXXFLAGS)
